infra/longhorn/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: longhorn-system
  annotations:
    pod-security.kubernetes.io/enforce: privileged
