infra/longhorn/http-routes.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: longhorn-frontend
  namespace: longhorn-system
spec:
  parentRefs:
  - name: shared-gateway
    namespace: gateway
  hostnames:
  - "longhorn.lab.sturla.tech"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: longhorn-frontend
          port: 80
